Refactor AuthService tests